--- a/src/Bsg.Ef6.Tests/Bsg.EF6.Tests.csproj
+++ b/src/Bsg.Ef6.Tests/Bsg.EF6.Tests.csproj
@@ -62,9 +62,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Repo\IPrimaryRepository.cs" />
+    <Compile Include="Data\Entity\IPrimaryEntity.cs" />
+    <Compile Include="Data\Repo\PrimaryRepository.cs" />
     <Compile Include="Extensions\ServiceProviderExtensions.cs" />
-    <Compile Include="PlaceholderTests2.cs" />
-    <Compile Include="PlaceholderTests1.cs" />
+    <Compile Include="TestCases\TruncateTests.cs" />
+    <Compile Include="TestCases\BulkSelectAndInsertTests.cs" />
+    <Compile Include="TestCases\BulkSelectAndUpdateTests.cs" />
+    <Compile Include="TestCases\BulkUpdateTests.cs" />
+    <Compile Include="TestCases\BulkInsertTests.cs" />
+    <Compile Include="TestCases\BulkDeleteTests.cs" />
+    <Compile Include="TestCases\NonBulkTests.cs" />
+    <Compile Include="TestCases\RepoTransactionTests.cs" />
+    <Compile Include="TestCases\RepoVariantTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\Configurations\TwoConfiguration.cs" />
     <Compile Include="Data\Configurations\OneConfiguration.cs" />
@@ -80,7 +90,11 @@
     <Compile Include="Data\Domain\Two.cs" />
     <Compile Include="Data\Wrappers\TwoWrapper.cs" />
     <Compile Include="Data\Wrappers\BetaWrapper.cs" />
-    <Compile Include="TestBase.cs" />
+    <Compile Include="Services\AlphaRepository.cs" />
+    <Compile Include="Services\IAlphaRepository.cs" />
+    <Compile Include="Services\IOneRepository.cs" />
+    <Compile Include="Services\OneRepository.cs" />
+    <Compile Include="TestInfrastructure\TestBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -97,7 +111,11 @@
       <Name>Bsg.Ef6</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\Newtonsoft.Json.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
