--- a/src/Bsg.Ef6.Tests/packages.config
+++ b/src/Bsg.Ef6.Tests/packages.config
@@ -3,4 +3,5 @@
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="NUnit" version="2.6.4" targetFramework="net461" />
+  <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
 </packages>
