--- a/src/Bsg.Ef6.Tests/Bsg.EF6.Tests.csproj
+++ b/src/Bsg.Ef6.Tests/Bsg.EF6.Tests.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Configurations\SchemaScopedConfiguration.cs" />
     <Compile Include="Data\Repo\IPrimaryRepository.cs" />
     <Compile Include="Data\Entity\IPrimaryEntity.cs" />
     <Compile Include="Data\Repo\PrimaryRepository.cs" />
